<resources>
    <string name="app_name">NewsAppTask</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="breaking_news">Breaking News</string>
    <string name="general_news">You May like</string>
    <string name="breaking_news_title">this is title one for the first breaking news article item to test the width of the textview</string>
    <string name="author_name">www.google.com</string>
    <string name="news_title">news title 1</string>
    <string name="search">Search</string>
    <string name="saved">Saved</string>
    <string name="saved_articles">Saved Articles</string>
    <string name="setting">Setting</string>
    <string name="selected_country">Selected Country:</string>
    <string name="favourite_categories">Favourite categories:</string>
    <string name="title_activity_on_board">OnBoardActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="welcome_please_select_the_following">Welcome, Select the following:</string>
    <string name="select_your_country">Select your country:</string>
    <string name="view">View</string>
    <string name="select_your_categories">Select your categories:</string>
    <string name="selected_categories">Selected categories:</string>
    <string name="clear">Clear</string>
    <string name="save">Save</string>
    <string name="change">Change</string>
    <string name="reset">Reset</string>
    <string name="sorry_no_results_found">Sorry! No results found:(</string>
    <string name="sorry_no_saved_articles_found">Sorry! No saved articles found :(</string>

    <!-- Strings used for Toasts and snackBar -->
    <string name="max_category_error_msg">Maximum category number is 3</string>
    <string name="select_category_error_msg">Please select 3 categories</string>
    <string name="select_country_error_msg">Please select a country</string>
    <string name="preferences_saved_msg">Preferences Saved.</string>
    <string name="selected_country_info_msg">Country %1$s selected.</string>
    <string name="offline_mode_info_msg">offline mode, Showing cached data.</string>
    <string name="sorted_articles_info_msg">Sorted by published dated.</string>
    <string name="somthing_wrong_error_msg">Something wrong happen!</string>
    <string name="article_already_saved_msg">Article already saved before!</string>
    <string name="article_saved_msg">Article Saved Successfully.</string>
    <string name="article_removed_msg">Article removed successfully.</string>
    <string name="undo_msg">Undo</string>
    <string name="search_category_reset_msg">Search category reset.</string>
    <string name="search_category_set_msg">Search category set to %1$s </string>



</resources>