<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.first_time_page.ui.OnBoardActivity">

    <TextView
        android:id="@+id/tvFirstTimeOpenTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:fontFamily="@font/open_sans_bold"
        android:text="@string/welcome_please_select_the_following"
        android:textColor="?colorOnSecondary"
        android:textSize="@dimen/_16sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tvTitleSelectCountry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:fontFamily="@font/open_sans_semibold"
        android:text="@string/select_your_country"
        android:textColor="?colorOnSecondary"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvFirstTimeOpenTitle" />

    <TextView
        android:id="@+id/tvSelectCountry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:fontFamily="@font/open_sans_semibold"
        tools:text="EGY"
        android:textColor="@color/purple_500"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvFirstTimeOpenTitle" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvSelectCountry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleSelectCountry" />

    <TextView
        android:id="@+id/tvTitleSelectCategories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:fontFamily="@font/open_sans_semibold"
        android:text="@string/select_your_categories"
        android:textColor="?colorOnSecondary"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rvSelectCountry" />

    <com.jaredrummler.materialspinner.MaterialSpinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleSelectCategories"/>

    <TextView
        android:id="@+id/tvTitleSelectedCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:fontFamily="@font/open_sans_semibold"
        android:text="@string/selected_categories"
        android:textColor="?colorOnSecondary"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

    <TextView
        android:id="@+id/tvTitleClearSelectedCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:fontFamily="@font/open_sans_semibold"
        android:text="@string/clear"
        android:textColor="@color/red"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

    <TextView
        android:id="@+id/tvSelectedCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:fontFamily="@font/open_sans"
        tools:text="sports - health"
        android:textColor="?colorOnSecondary"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleSelectedCategory" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSaveCategories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:background="@drawable/button_rounded_background"
        android:backgroundTint="@color/purple_500"
        android:fontFamily="@font/open_sans_semibold"
        android:text="@string/save"
        android:textSize="@dimen/_13sdp"
        android:textColor="@color/white"
        android:foreground="?selectableItemBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSelectedCategory" />

</androidx.constraintlayout.widget.ConstraintLayout>