<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.search_page.ui.SearchFragment">

    <androidx.appcompat.widget.SearchView
        android:id="@+id/svNewsSearch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:focusable="true"
        app:iconifiedByDefault="false"
        app:layout_constraintEnd_toStartOf="@+id/tvChangeSearchCategory"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:queryHint="Search..." />

    <TextView
        android:id="@+id/tvChangeSearchCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_12sdp"
        android:fontFamily="@font/open_sans_semibold"
        android:foreground="?selectableItemBackground"
        android:text="@string/change"
        android:textColor="@color/purple_500"
        android:textSize="@dimen/_13sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.jaredrummler.materialspinner.MaterialSpinner
        android:id="@+id/categorySpinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_5sdp"
        android:textSize="@dimen/_13sdp"
        android:visibility="gone"
        app:layout_constraintEnd_toStartOf="@+id/tvResetSearchCategory"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvChangeSearchCategory" />

    <TextView
        android:id="@+id/tvResetSearchCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_12sdp"
        android:fontFamily="@font/open_sans"
        android:foreground="?selectableItemBackground"
        android:text="@string/reset"
        android:textColor="@color/purple_500"
        android:textSize="@dimen/_14sdp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvChangeSearchCategory" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvSearchedNews"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/_12sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/categorySpinner" />

    <TextView
        android:id="@+id/tvNoResultFound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sorry_no_results_found"
        android:fontFamily="@font/open_sans_bold"
        android:textSize="@dimen/_17sdp"
        android:textColor="@color/purple_500"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/categorySpinner"
        android:visibility="gone"/>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/svNewsSearch" />
</androidx.constraintlayout.widget.ConstraintLayout>