<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/_10sdp"
    android:layout_marginBottom="@dimen/_10sdp"
    android:elevation="20dp"
    app:cardCornerRadius="20dp"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        >

        <androidx.cardview.widget.CardView
            android:id="@+id/cvArticleImage"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:elevation="12dp"
            app:cardCornerRadius="40dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/ivArticleImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/breaking_news_img"/>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tvArticleTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/open_sans_bold"
            android:maxLines="1"
            android:ellipsize="end"
            android:text="@string/news_title"
            android:textColor="?colorOnSecondary"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cvArticleImage"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/open_sans_semibold"
            android:maxLines="3"
            android:ellipsize="end"
            android:textColor="?colorOnSecondary"
            android:text="@string/breaking_news_title"
            android:textSize="@dimen/_13sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cvArticleImage"
            app:layout_constraintTop_toBottomOf="@+id/tvArticleTitle" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="17dp"
            android:layout_height="17dp"
            android:layout_marginStart="10dp"
            android:src="@drawable/calendar_clock_24"
            app:layout_constraintStart_toEndOf="@+id/cvArticleImage"
            app:layout_constraintTop_toTopOf="@+id/tvDatePublished"
            app:tint="?colorOnSecondary" />

        <TextView
            android:id="@+id/tvDatePublished"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/noticia_text"
            android:gravity="bottom"
            android:maxLines="3"
            tools:text="2022-12-22"
            android:textColor="?colorOnSecondary"
            android:textSize="@dimen/_11sdp"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/tvDescription" />

        <TextView
            android:id="@+id/tvAuthor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/noticia_text"
            android:gravity="bottom"
            android:maxLines="3"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/author_name"
            android:textColor="?colorOnSecondary"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/cvArticleImage"
            app:layout_constraintTop_toBottomOf="@+id/tvDatePublished" />

        <ImageView
            android:id="@+id/like_iv"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/heart_24"
            android:foreground="?selectableItemBackground"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvAuthor"
            app:tint="?colorOnSecondary" />

        <ImageView
            android:id="@+id/share_iv"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/share_24"
            android:layout_marginEnd="@dimen/_10sdp"
            android:foreground="?selectableItemBackground"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/like_iv"
            app:layout_constraintTop_toBottomOf="@+id/tvAuthor"
            app:tint="?colorOnSecondary"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>